# qt6SetDefaultFontToQml

./: CMakeLists.txt  htmldocumentitem.cpp  htmldocumentitem.h  main.cpp  main.qml  qt6-i18n-demo_zh_CN.ts  readme.md  ts01.ts
